# Assignment2-mohouail

./: CMakeLists.txt  README.md  main.cpp
Code_lib/: CMakeLists.txt  DEQ.cpp  DEQ.h  Plane.cpp  Plane.h  Simulation.cpp  Simulation.h
Exam practice/: examples.cpp
Google_tests/: CMakeLists.txt  TestDEQ.cpp  TestPlane.cpp  TestSimulation.cpp
